Add kotlin to the project